[gd_scene load_steps=19 format=3 uid="uid://cxjftdgb8sex7"]

[ext_resource type="PackedScene" uid="uid://n0kjj88rjuor" path="res://wendigoTerrainMap/wendigo_forest.tscn" id="1_663a6"]
[ext_resource type="Texture2D" uid="uid://bdnei7nra2707" path="res://Assets/Materials/ProgressUnder.png" id="2_0skau"]
[ext_resource type="Texture2D" uid="uid://3omsqjf7hpnp" path="res://Assets/Materials/ProgressBar.png" id="3_ggiv8"]
[ext_resource type="Texture2D" uid="uid://booo2f3co4624" path="res://Assets/Materials/spa-homepage-greybox.png" id="4_jgosd"]
[ext_resource type="Script" uid="uid://1murb5rpgnye" path="res://globalScenes/dialog.gd" id="5_14laj"]
[ext_resource type="Script" uid="uid://86qm0b5ja6rq" path="res://globalScenes/pause_menu.gd" id="6_l6vwp"]
[ext_resource type="FontFile" uid="uid://bmtr4hnwlwqdp" path="res://Assets/Materials/StartScreenAssets/BungeeFont/BungeeTint-Regular.ttf" id="7_vpgtc"]
[ext_resource type="AudioStream" uid="uid://dcxd3btis03eu" path="res://Assets/SFX/buttonPressNoise.wav" id="8_oci45"]
[ext_resource type="FontFile" uid="uid://cx705ekmev8os" path="res://Assets/Jersey20-Regular.ttf" id="9_yaypm"]
[ext_resource type="Script" uid="uid://bxfbjtc5mwqms" path="res://globalScenes/plusCounter.gd" id="10_5gakp"]
[ext_resource type="Texture2D" uid="uid://6664beu66w00" path="res://Assets/Materials/StartScreenAssets/MothmanPNG.png" id="11_8b0br"]
[ext_resource type="PackedScene" uid="uid://x3pdcme5x3sw" path="res://globalScenes/zwendigo.tscn" id="12_1kcn1"]
[ext_resource type="PackedScene" uid="uid://dbali5u4o76qd" path="res://Wendigo Level/WendigoCharacter/wendigoAi.tscn" id="13_0skau"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_663a6"]

[sub_resource type="Sky" id="Sky_g280x"]
sky_material = SubResource("PhysicalSkyMaterial_663a6")

[sub_resource type="Environment" id="Environment_0skau"]
background_mode = 2
background_energy_multiplier = 0.46
sky = SubResource("Sky_g280x")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 2
ssr_enabled = true
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.07

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y8vqk"]
texture = ExtResource("4_jgosd")

[sub_resource type="Theme" id="Theme_0eadr"]
default_font_size = 32
Panel/styles/panel = SubResource("StyleBoxTexture_y8vqk")

[node name="WendigoLevel" type="Node3D"]

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.9697017, 0.2442921, 0, -0.2442921, -0.9697017, 0, 15.194211, 0)
light_color = Color(0.69041634, 0.7934268, 1, 1)
light_energy = 0.689

[node name="FogMachine" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0skau")

[node name="WendigoForest" parent="." instance=ExtResource("1_663a6")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)

[node name="Z" parent="." instance=ExtResource("12_1kcn1")]

[node name="Ui" type="CanvasLayer" parent="."]

[node name="SprintBar" type="TextureProgressBar" parent="Ui"]
visible = false
offset_left = 57.0
offset_top = 204.0
offset_right = 117.0
offset_bottom = 873.0
value = 50.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("2_0skau")
texture_progress = ExtResource("3_ggiv8")

[node name="Dialog" type="Control" parent="Ui"]
modulate = Color(0.656569, 1, 0.915033, 1)
layout_mode = 3
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_0eadr")
script = ExtResource("5_14laj")

[node name="Box" type="Panel" parent="Ui/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 178.0
offset_bottom = 0.359985
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/Dialog"]
layout_mode = 0
offset_left = 24.0
offset_top = 196.0
offset_right = 1902.0
offset_bottom = 344.0

[node name="Speaker" type="Label" parent="Ui/Dialog/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.435479, 0.0274811, 1)
theme_override_font_sizes/font_size = 20

[node name="Dialogue" type="RichTextLabel" parent="Ui/Dialog/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.883863, 0.87429, 0.883631, 1)
theme_override_colors/font_shadow_color = Color(0.212305, 0.212305, 0.212305, 1)
theme_override_font_sizes/normal_font_size = 24
fit_content = true

[node name="Pause Menu" type="Control" parent="Ui"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_l6vwp")

[node name="ColorRect" type="ColorRect" parent="Ui/Pause Menu"]
process_mode = 3
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.156863)

[node name="GameTitle" type="Label" parent="Ui/Pause Menu"]
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 348.0
offset_bottom = 105.0
scale = Vector2(1.15674, 1.8462)
theme_override_fonts/font = ExtResource("7_vpgtc")
theme_override_font_sizes/font_size = 94
text = "Cryptid Zoo"

[node name="VolumeSlider" type="HSlider" parent="Ui/Pause Menu"]
process_mode = 3
layout_mode = 0
offset_left = 357.0
offset_top = 825.0
offset_right = 1081.0
offset_bottom = 1015.0
min_value = -6.0
max_value = 72.0
step = 6.0
value = 72.0

[node name="SoundLabel" type="Label" parent="Ui/Pause Menu"]
layout_mode = 0
offset_left = 41.0
offset_top = 893.0
offset_right = 323.0
offset_bottom = 951.0
theme_override_font_sizes/font_size = 42
text = "Master Sound"

[node name="backButton" type="Button" parent="Ui/Pause Menu"]
process_mode = 3
layout_mode = 0
offset_left = 47.0
offset_top = 992.0
offset_right = 204.0
offset_bottom = 1047.0
theme_override_font_sizes/font_size = 34
text = "Resume"

[node name="mainMenu" type="Button" parent="Ui/Pause Menu"]
process_mode = 3
layout_mode = 0
offset_left = 238.0
offset_top = 992.0
offset_right = 452.0
offset_bottom = 1047.0
theme_override_font_sizes/font_size = 34
text = "Main Menu"

[node name="ButtonPressNoise" type="AudioStreamPlayer" parent="Ui/Pause Menu"]
stream = ExtResource("8_oci45")
volume_db = -15.0

[node name="intText" type="Label" parent="Ui"]
visible = false
offset_left = 720.0
offset_top = 808.0
offset_right = 1139.0
offset_bottom = 875.0
theme_override_font_sizes/font_size = 48
text = "Press E to interact"

[node name="PlushControl" type="Control" parent="Ui"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MothmanPlushCounter" type="Label" parent="Ui/PlushControl"]
layout_mode = 0
offset_left = 1713.0
offset_right = 1806.0
offset_bottom = 73.0
theme_override_fonts/font = ExtResource("9_yaypm")
theme_override_font_sizes/font_size = 72
text = "0/5"
script = ExtResource("10_5gakp")

[node name="MothmanPlushCounterSprite" type="Sprite2D" parent="Ui/PlushControl"]
position = Vector2(1865.44, 36.1875)
scale = Vector2(0.176459, 0.189987)
texture = ExtResource("11_8b0br")

[node name="WendigoAi" parent="." instance=ExtResource("13_0skau")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.861615)

[connection signal="drag_ended" from="Ui/Pause Menu/VolumeSlider" to="Ui/Pause Menu" method="_on_volume_slider_drag_ended"]
[connection signal="pressed" from="Ui/Pause Menu/backButton" to="Ui/Pause Menu" method="_on_back_button_pressed"]
[connection signal="pressed" from="Ui/Pause Menu/mainMenu" to="Ui/Pause Menu" method="_on_main_menu_pressed"]
